# pycopa

./: .gitignore  LICENSE  Makefile  README.md  fpm.rsp  fpm.toml
python/: MANIFEST.in  pyproject.toml  rosenbrock.py
python/pycopa/: parallel_sampler.py  sampler.py
python/test/: rosenbrock.py
python/test/rosenbrock/parallel/: plot_rosenbrock.py  plot_rosenbrock_corner.py  rosenbrock.py
python/test/rosenbrock/single/: plot_rosenbrock.py  plot_rosenbrock_corner.py  rosenbrock.py
src/: parallel_sampler.f90  sampler.f90
